# omaVideo

./: .gitignore  .gitmodules  CMakeLists.txt  Kbuild  Makefile  README.md  filesToBin.py  requirements.txt
include/core/: core.h  types.h
include/format/: reader.h  renderer.h
include/platform/: platform.h
src/core/: core.c
src/format/: reader.c  renderer.c
src/platform/: efi.c  linux-kernel.c  linux.c
